CHATS_SIT/force-app/main/default/objects/Service_Period_Config__c.object
<CustomObject>
    <fields>
        <fullName>Future_Payment__c</fullName>
        <label>Future Payment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Release_Day__c</fullName>
        <label>Payment Release Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Monday</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Tuesday</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Wednesday</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Thursday</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Friday</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Saturday</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Sunday</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Period_Frequency__c</fullName>
        <description>Number of service periods (1, 2, 3, or 4 weeks) for which the state will pay
            providers at a time.</description>
        <label>Service Period Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 week</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 weeks</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 weeks</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 weeks</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Calculation_Day__c</fullName>
        <label>Payment Calculation Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 day before payment processing day</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 day before payment processing day</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Period Config</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Service Period Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Period Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>